--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build --pull -t "registry.docker.nat.bt.com/oss-fuzz/oss-fuzz-base/base-builder-python:v1"
+      run: docker build -t "registry.docker.nat.bt.com/oss-fuzz/oss-fuzz-base/base-builder-python:v1"
