--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,3 +28,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install atheris
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Build and push docker image
+      uses: mr-smithers-excellent/docker-build-push@v5
+      with:
+        image: oss-fuzz-base/base-builder-python:v1
+        registry: gcr.io
+        username: syedafazilath.jahaa@bt.com
+        password: ${{ secrets.DOCKER_PASSWORD }}
