--- a/.clusterfuzzlite/Dockerfile
+++ b/.clusterfuzzlite/Dockerfile
@@ -1,4 +1,4 @@
-FROM gcr.io/oss-fuzz-base/base-builder-python:v1
+FROM docker.io/oss-fuzz-base/base-builder-python:v1
 RUN apt-get update && apt-get install -y make autoconf automake libtool
 
 COPY . $SRC/Dvpwa
