--- a/.clusterfuzzlite/Dockerfile
+++ b/.clusterfuzzlite/Dockerfile
@@ -5,7 +5,7 @@ COPY . $SRC/Dvpwa
 WORKDIR Dvpwa
 COPY .clusterfuzzlite/build.sh $SRC/
 
-RUN pip3 install --update pip
+RUN pip3 install --upgrade pip
 RUN pip3 install lz4 --force
 RUN pip3 install idna --force
 RUN pip3 install atheris --force
