--- a/.clusterfuzzlite/.github/workflows/docker_image.yml
+++ b/.clusterfuzzlite/.github/workflows/docker_image.yml
@@ -32,6 +32,8 @@ jobs:
     - name: Build and push docker image
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
+        path: .clusterfuzzlite
+        dockerfile: .clusterfuzzlite/Dockerfile
         image: khushi2/oss-fuzz
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
