--- a/.clusterfuzzlite/.github/workflows/docker_image.yml
+++ b/.clusterfuzzlite/.github/workflows/docker_image.yml
@@ -22,8 +22,7 @@ jobs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
-        path: .clusterfuzzlite
-        dockerfile: .clusterfuzzlite/Dockerfile
+        
         python-version: "3.10"
     - name: Install dependencies
       run: |
@@ -31,10 +30,12 @@ jobs:
         pip install atheris
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
+    
         
     - name: Build and push docker image
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
+        file: ./.clusterfuzzlite/Dockerfile
         image: khushi2/oss-fuzz
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
