--- a/.clusterfuzzlite/.github/workflows/docker_image.yml
+++ b/.clusterfuzzlite/.github/workflows/docker_image.yml
@@ -35,8 +35,8 @@ jobs:
     - name: Build and push docker image
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
-        file: ./.clusterfuzzlite/Dockerfile
         image: khushi2/oss-fuzz
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+      run: docker build -t khushi2/oss-fuzz . -f Dockerfile.Dockerfile
