--- a/.clusterfuzzlite/.github/workflows/docker_image.yml
+++ b/.clusterfuzzlite/.github/workflows/docker_image.yml
@@ -35,6 +35,8 @@ jobs:
     - name: Build and push docker image
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
+        path: ./Dvpwa/.clusterfuzzlite
+        dockerfile: ./Dvpwa/.clusterfuzzlite/Dockerfile
         image: khushi2/oss-fuzz
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
