--- a/.clusterfuzzlite/.github/workflows/docker_image.yml
+++ b/.clusterfuzzlite/.github/workflows/docker_image.yml
@@ -26,8 +26,6 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install atheris
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
     
@@ -35,8 +33,8 @@ jobs:
     - name: Build and push docker image
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
-        path: ./Dvpwa/.clusterfuzzlite
-        dockerfile: ./Dvpwa/.clusterfuzzlite/Dockerfile
+        context: ./.clusterfuzzlite
+        file: ./.clusterfuzzlite/Dockerfile
         image: khushi2/oss-fuzz
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
