--- a/.clusterfuzzlite/.github/workflows/docker_image.yml
+++ b/.clusterfuzzlite/.github/workflows/docker_image.yml
@@ -33,10 +33,9 @@ jobs:
     - name: Build and push docker image
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
-        context: ./.clusterfuzzlite
-        file: ./.clusterfuzzlite/Dockerfile
         image: khushi2/oss-fuzz
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+        dockerfile: .clusterfuzzlite/Dockerfile
       run: docker build -t khushi2/oss-fuzz . -f Dockerfile.Dockerfile
