--- a/.clusterfuzzlite/.github/workflows/docker_image.yml
+++ b/.clusterfuzzlite/.github/workflows/docker_image.yml
@@ -28,7 +28,8 @@ jobs:
       run: |
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
-    
+    -name: Set the path for dockerfile
+     dockerfile: .clusterfuzzlite/Dockerfile
         
     - name: Build and push docker image
       uses: mr-smithers-excellent/docker-build-push@v4
@@ -37,5 +38,5 @@ jobs:
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        dockerfile: .clusterfuzzlite/Dockerfile
+        
       run: docker build -t khushi2/oss-fuzz . -f Dockerfile.Dockerfile
