--- a/.clusterfuzzlite/.github/workflows/fuzzer.yml
+++ b/.clusterfuzzlite/.github/workflows/fuzzer.yml
@@ -1,6 +1,40 @@
 name: CIFuzz
-on: [pull_request]
+ push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 jobs:
+
+
+permissions:
+  contents: read
+
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    
+        
+    - name: Build and push docker image
+      uses: mr-smithers-excellent/docker-build-push@v4
+      with:
+        image: khushi2/oss-fuzz
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        
+  
+  
   Fuzzing:
     runs-on: ubuntu-latest
     strategy:
