--- a/.github/workflows/try.yml
+++ b/.github/workflows/try.yml
@@ -1,10 +1,9 @@
-# This is a basic workflow to help you get started with Actions
+# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: CI
+name: Python application
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
   pull_request:
@@ -12,62 +11,61 @@ on:
 
 permissions:
   contents: read
+
 jobs:
-  # This workflow contains a single job called "build"
-  
   build:
-    # The type of runner that the job will run on
+
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-      - name: Set up Python 3.10
-        with:
-
-          python-version: "3.10"
-      - name: Install dependencies
-        run: |
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-
-      - name: Build and push docker image
-        uses: mr-smithers-excellent/docker-build-push@v4
-        with:
-          image: khushi2/oss-fuzz
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install atheris
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        
+    - name: Build and push docker image
+      uses: mr-smithers-excellent/docker-build-push@v4
+      with:
+        image: khushi2/oss-fuzz
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+  
+  
   Fuzzing:
-      runs-on: ubuntu-latest
-      strategy:
-          fail-fast: false
-          matrix:
-              sanitizer: [address, undefined, memory]
-      steps:
-      - uses: actions/checkout@v3
-      - name: Build Fuzzers (${{ matrix.sanitizer }})
-        id: build
-        uses: google/oss-fuzz/infra/cifuzz/actions/build_fuzzers@master
-        with:
-          oss-fuzz-project-name: 'Dvpwa'
-          language: python
-          dry-run: false
-          sanitizer: ${{ matrix.sanitizer }}
-
-      - name: Run Fuzzers (${{ matrix.sanitizer }})
-        uses: google/oss-fuzz/infra/cifuzz/actions/run_fuzzers@master
-        with:
-          oss-fuzz-project-name: 'Dvpwa'
-          language: python
-          fuzz-seconds: 600
-          dry-run: false
-          sanitizer: ${{ matrix.sanitizer }}
-      - name: Upload Crash
-        uses: actions/upload-artifact@v1
-        if: failure() && steps.build.outcome == 'success'
-        with:
-          name: artifacts
-          path: ./out/artifacts
+    runs-on: ubuntu-latest
+    strategy:
+        fail-fast: false
+        matrix:
+            sanitizer: [address, undefined, memory]
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build Fuzzers (${{ matrix.sanitizer }})
+      id: build
+      uses: google/oss-fuzz/infra/cifuzz/actions/build_fuzzers@master
+      with:
+        oss-fuzz-project-name: 'Dvpwa'
+        language: python
+        dry-run: false
+        sanitizer: ${{ matrix.sanitizer }}
+        
+    - name: Run Fuzzers (${{ matrix.sanitizer }})
+      uses: google/oss-fuzz/infra/cifuzz/actions/run_fuzzers@master
+      with:
+        oss-fuzz-project-name: 'Dvpwa'
+        language: python
+        fuzz-seconds: 600
+        dry-run: false
+        sanitizer: ${{ matrix.sanitizer }}
+    - name: Upload Crash
+      uses: actions/upload-artifact@v1
+      if: failure() && steps.build.outcome == 'success'
+      with:
+        name: artifacts
+        path: ./out/artifacts
