--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -45,7 +45,7 @@ jobs:
     strategy:
         fail-fast: false
         matrix:
-            sanitizer: [address, undefined, memory]
+            sanitizer: [address]
     steps:
     - uses: actions/checkout@v3
     - name: Build Fuzzers (${{ matrix.sanitizer }})
