--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -50,7 +50,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build Fuzzers (${{ matrix.sanitizer }})
       id: build
-      uses: Clusterfuzzlite/oss-fuzz/infra/cifuzz/actions/build_fuzzers@master
+      uses: google/clusterfuzzlite/actions/build_fuzzers@v1
       with:
         oss-fuzz-project-name: 'Dvpwa'
         language: python
@@ -58,7 +58,7 @@ jobs:
         sanitizer: ${{ matrix.sanitizer }}
         
     - name: Run Fuzzers (${{ matrix.sanitizer }})
-      uses: Clusterfuzzlite/oss-fuzz/infra/cifuzz/actions/run_fuzzers@master
+      uses: google/clusterfuzzlite/actions/build_fuzzers@v1
       with:
         oss-fuzz-project-name: 'Dvpwa'
         language: python
