--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -50,7 +50,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build Fuzzers (${{ matrix.sanitizer }})
       id: build
-      uses: google/clusterfuzzlite/actions/build_fuzzers@master
+      uses: google/clusterfuzzlite/actions/build_fuzzers@v1
       with:
         github-token: ${{ secrets.TOKEN }}
         oss-fuzz-project-name: 'Dvpwa'
@@ -59,7 +59,7 @@ jobs:
         sanitizer: ${{ matrix.sanitizer }}
         
     - name: Run Fuzzers (${{ matrix.sanitizer }})
-      uses: google/clusterfuzzlite/actions/build_fuzzers@master
+      uses: google/clusterfuzzlite/actions/run_fuzzers@v1
       with:
         github-token: ${{ secrets.TOKEN }}
         oss-fuzz-project-name: 'Dvpwa'
