--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -59,6 +59,12 @@ jobs:
         dry-run: false
         sanitizer: ${{ matrix.sanitizer }}
         
+    - name: Scan Report
+      uses: actions/upload-artifact@v2
+      with:
+          name: scan-report
+          path: 'report.html'    
+        
     - name: Run Fuzzers (${{ matrix.sanitizer }})
       uses: google/clusterfuzzlite/actions/run_fuzzers@v1
       with:
