--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -11,14 +11,16 @@ on:
     branches: [ master ]
        
 
+
+  
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-latest    
+     
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.10
@@ -30,7 +32,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install atheris
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
         
     - name: Build and push docker image
       uses: mr-smithers-excellent/docker-build-push@v4
@@ -42,58 +43,104 @@ jobs:
   
   
   Fuzzing:
-    runs-on: ubuntu-latest
-    strategy:
+     runs-on: ubuntu-latest
+     concurrency:
+      group: ${{ github.workflow }}-${{ matrix.sanitizer }}-${{ github.ref }}
+      cancel-in-progress: true
+     strategy:
         fail-fast: false
         matrix:
             sanitizer: [address]
+     steps:
+     - uses: actions/checkout@v3
+     - name: Build Fuzzers (${{ matrix.sanitizer }})
+       id: build
+       uses: google/clusterfuzzlite/actions/build_fuzzers@v1
+       with:
+        github-token: ${{ secrets.TOKEN }}    
+        language: python
+        dry-run: false
+        sanitizer: ${{ matrix.sanitizer }}
+        upload-build: true
+        keep-unaffected-fuzz-targets: true
+        
+     - name: Scan Report
+       uses: actions/upload-artifact@v2
+       with:
+          name: scan-report
+          path: 'report.html' 
+        
+     - name: Run Fuzzers (${{ matrix.sanitizer }})
+       uses: google/clusterfuzzlite/actions/run_fuzzers@v1
+       with:
+        github-token: ${{ secrets.TOKEN }}
+        language: python
+        fuzz-seconds: 200
+        mode: 'batch'
+        dry-run: false
+        minimize-crashes: 1
+        report-unreproducible-crashes: true
+        keep-unaffected-fuzz-targets: true
+        sanitizer: ${{ matrix.sanitizer }}
+        
+        # See later section on "Git repo for storage".
+        storage-repo: https://${{ secrets.TOKEN }}@github.com/khushbureddy-gangarapu/khushbureddy-gangarapu.github.io.git
+        storage-repo-branch: master   # Optional. Defaults to "main"
+        storage-repo-branch-coverage: master  # Optional. Defaults to "gh-pages".
+        
+  Pruning:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-    - uses: actions/checkout@v3
-    - name: Build Fuzzers (${{ matrix.sanitizer }})
+    
+    - name: Build Fuzzers
       id: build
       uses: google/clusterfuzzlite/actions/build_fuzzers@v1
       with:
-        github-token: ${{ secrets.TOKEN }}
         language: python
-        dry-run: false
-        sanitizer: ${{ matrix.sanitizer }}
+        upload-build: true
         
-    - name: Scan Report
-      uses: actions/upload-artifact@v2
-      with:
-          name: scan-report
-          path: 'report.html'    
-        
-    - name: Run Fuzzers (${{ matrix.sanitizer }})
+
+    - name: Run Fuzzers
+      id: run
       uses: google/clusterfuzzlite/actions/run_fuzzers@v1
       with:
-        github-token: ${{ secrets.TOKEN }}
         language: python
-        fuzz-seconds: 600
-        mode: 'batch'
-        dry-run: false
-        sanitizer: ${{ matrix.sanitizer }}
-        
+        github-token: ${{ secrets.TOKEN }}
+        fuzz-seconds: 200
+        mode: 'prune'
+        # Optional but recommended.
+        # See later section on "Git repo for storage".
+        storage-repo: https://${{ secrets.TOKEN }}@github.com/khushbureddy-gangarapu/khushbureddy-gangarapu.github.io.git
+        storage-repo-branch: master   # Optional. Defaults to "main"
+        storage-repo-branch-coverage: master  # Optional. Defaults to "gh-pages".
+  
+  
   Coverage:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
     steps:
     - name: Build Fuzzers
       id: build
       uses: google/clusterfuzzlite/actions/build_fuzzers@v1
       with:
         sanitizer: coverage
+        language: python
+        
     - name: Run Fuzzers
       id: run
       uses: google/clusterfuzzlite/actions/run_fuzzers@v1
       with:
         github-token: ${{ secrets.TOKEN }}
-        fuzz-seconds: 600
+        fuzz-seconds: 200
         mode: 'coverage'
+        language: python
         sanitizer: 'coverage'
-        
-    - name: Upload Crash
-      uses: actions/upload-artifact@v1
-      if: failure() && steps.build.outcome == 'success'
-      with:
-        name: artifacts
-        path: ./out/artifacts
+        # Optional but recommended.
+        # See later section on "Git repo for storage".
+        storage-repo: https://${{ secrets.TOKEN }}@github.com/khushbureddy-gangarapu/khushbureddy-gangarapu.github.io.git
+        storage-repo-branch: master   # Optional. Defaults to "main"
+        storage-repo-branch-coverage: master  # Optional. Defaults to "gh-pages".
