--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -4,12 +4,11 @@
 name: Fuzzer
 
 on:
-
-  pull_request:
+  push:
     branches: [ master ]
     
-    paths:
-      - '**.py'
+  pull_request:
+    branches: [ master ]
        
 permissions:
   contents: read
@@ -30,7 +29,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install atheris
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
         
     - name: Build and push docker image
       uses: mr-smithers-excellent/docker-build-push@v4
@@ -51,7 +49,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build Fuzzers (${{ matrix.sanitizer }})
       id: build
-      uses: google/oss-fuzz/infra/cifuzz/actions/build_fuzzers@master
+      uses: google/clusterfuzzlite/actions/build_fuzzers@v1
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         language: python
@@ -65,7 +63,7 @@ jobs:
           path: 'report.html'    
         
     - name: Run Fuzzers (${{ matrix.sanitizer }})
-      uses: google/oss-fuzz/infra/cifuzz/actions/run_fuzzers@master
+      uses: google/clusterfuzzlite/actions/run_fuzzers@v1
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         language: python
@@ -126,5 +124,3 @@ jobs:
         storage-repo-branch: master
       
         
-        
-      
