--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -49,12 +49,16 @@ jobs:
         fail-fast: false
         matrix:
             sanitizer: [address]
+            engine: [afl]
+     env:
+        ENGINE: ${{ matrix.engine }}
      steps:
      - uses: actions/checkout@v3
      - name: Build Fuzzers (${{ matrix.sanitizer }})
        id: build
        uses: google/oss-fuzz/infra/cifuzz/actions/build_fuzzers@master
        with:
+        ENGINE: ${{ matrix.engine }}
         github-token: ${{ secrets.TOKEN }}    
         language: python
         dry-run: false
@@ -66,6 +70,7 @@ jobs:
      - name: Run Fuzzers (${{ matrix.sanitizer }})
        uses: google/oss-fuzz/infra/cifuzz/actions/run_fuzzers@master
        with:
+        ENGINE: ${{ matrix.engine }}
         github-token: ${{ secrets.TOKEN }}
         language: python
         fuzz-seconds: 800
